# pyclipboard

./: .gitignore  pyproject.toml
src/pyclipboard/: __main__.py  dmenu.py  pyclipboard.py
