[tool.poetry]
name = "pyclipboard"
version = "0.1.0"
description = "This package copied snippets to the clipboard."
authors = ["Zan Owsley <zanowsley@gmail.com>"]
readme = "README.md"
repository = "https://github.com/DanZanzibar/pyclipboard.git"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"